<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="grid"
            type="com.example.nerdle.Grid" />

        <variable
            name="gameViewModel"
            type="com.example.nerdle.GridViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/material_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number_material_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:textAlignment="center"
            android:textColor="@color/number"
            android:textSize="18sp"
            app:backgroundTint="@color/block"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="9">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</layout>

